--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
